# routeros-diff

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: ci.yaml
.github/workflows/: ci.yaml
extra/: ros-syntax.css
routeros_diff/: __init__.py  arguments.py  constants.py  exceptions.py  expressions.py  parser.py  sections.py  settings.py  utilities.py
routeros_diff/commands/: diff.py  prettify.py
tests/: test_routeros_diff.py
tests/test_files/: verbose_export.rsc
