[tool.poetry]
name = "routeros-diff"
description = "Tools for parsing & diffing RouterOS configuration files. Can produce config file patches."
version = "0.1.0"
authors = ["Adam Charnock <adam.charnock@gardunha.net>"]
repository = "https://github.com/gardunha/routeros-diff"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"
dephell = "^0.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
    from = {format = "poetry", path = "pyproject.toml"}
    envs = ["main"]
    to = {format = "setuppy", path = "setup.py"}
