[tool.poetry]
name = "routeros-diff"
description = "Tools for parsing & diffing RouterOS configuration files. Can produce config file patches."
version = "0.3.0"
authors = ["Adam Charnock <adam.charnock@gardunha.net>"]
repository = "https://github.com/gardunha/routeros-diff"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"
dephell = "^0.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
    from = {format = "poetry", path = "pyproject.toml"}
    envs = ["main"]
    to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
routeros_diff = 'routeros_diff.commands.diff:run'
ros_diff = 'routeros_diff.commands.diff:run'
routeros_prettify = 'routeros_diff.commands.prettify:run'
ros_prettify = 'routeros_diff.commands.prettify:run'
